# projetos_engenharia_de_dados

./: README.md
agregacao_de_dados/: README.md  pyproject.toml
agregacao_de_dados/src/: gerar_dados.py  main.py  utils.py
leitura_escrita_txt/: README.md  pyproject.toml
leitura_escrita_txt/data/processed/: dados_processados.txt
leitura_escrita_txt/data/raw/: base_dados.txt
leitura_escrita_txt/src/: main.py  utils.py
manipulacao_csv/: README.md  pyproject.toml
manipulacao_csv/src/: gerar_csv.py  main.py  utils.py
